# NIS1336_2023

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NIS1336 设计文档.docx  README.md  cmake_install.cmake  main.cpp
include/: account.h  reminder.h  task.h  ui.h
src/: account.cpp  reminder.cpp  task.cpp  ui.cpp
